<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="justin_martin.adiilapp.RegisterActivity"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="@dimen/login_titleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:layout_gravity="center"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/emailInputRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_labelEmail"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_labelNonAdherent" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_labelAdherent" />


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_labelAdmin" />

        </RadioGroup>


    </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            >

            <!-- TODO dynamic link -->
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register_textButton"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:id="@+id/inscriptionButtonRegister">
            </Button>

        </LinearLayout>

</LinearLayout>