<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="justin_martin.adiilapp.LoginActivity"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:src="@drawable/adiil_logo" />

    <TextView
        android:textSize="@dimen/login_titleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_labelSize"
                android:text="@string/login_labelEmail"
                />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_labelSize"
                android:text="@string/login_labelPassword"
                />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login_textButton"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF">
            </Button>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_resetPassword"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

</LinearLayout>